--- a/MOWOX/Info.plist
+++ b/MOWOX/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>LSApplicationCategoryType</key>
-	<string></string>
-	<key>Allow Arbitrary Loads</key>
-	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -31,39 +27,30 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>prefs</string>
-			</array>
-		</dict>
-	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>Code Signing Style</key>
 	<string>Automatic</string>
+	<key>LSHasLocalizedDisplayName</key>
+	<true/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSAppTransportSecurity</key>
-	<dict/>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>音乐权限</string>
-	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>蓝牙权限</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>蓝牙外设权限</string>
+	<string>蓝牙权限</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>日历权限</string>
 	<key>NSCameraUsageDescription</key>
 	<string>摄像头权限</string>
 	<key>NSContactsUsageDescription</key>
 	<string>通讯录权限</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>地理位置权限</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>健康权限</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>健康权限</string>
+	<key>NSHomeKitUsageDescription</key>
+	<string></string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>地理位置权限</string>
 	<key>NSLocationUsageDescription</key>
@@ -72,6 +59,10 @@
 	<string>地理位置权限</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>麦克风权限</string>
+	<key>NSMotionUsageDescription</key>
+	<string>运动权限</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>相册权限</string>
 	<key>NSRemindersUsageDescription</key>
 	<string></string>
 	<key>NSSiriUsageDescription</key>
@@ -81,7 +72,7 @@
 	<key>NSVideoSubscriberAccountUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>LaunchScreenRobot</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -90,9 +81,11 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>appLanguage</key>
+	<string></string>
 	<key>kTCCServiceMediaLibrary</key>
 	<string></string>
-	<key>appLanguage</key>
+	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string></string>
 </dict>
 </plist>
